add navigation bar mouse over and mouse out animation functionality

--- a/index.html
+++ b/index.html
@@ -14,28 +14,30 @@
   </head>
   <body>
     <header class="header">
-      <nav class="nav_container">
+      <nav class="nav">
         <div class="nav_links">
-          <a href="#About_me">About Me</a>
           <p class="link_divider">|</p>
-          <a href="#Embedded_software_engineering">
+          <a class="nav_link" href="#About_me">About Me</a>
+          <p class="link_divider">|</p>
+          <a class="nav_link" href="#Embedded_software_engineering">
             Embedded Software Engineering
           </a>
           <p class="link_divider">|</p>
-          <a href="#Web_Development">
+          <a class="nav_link" href="#Web_Development">
            Web Development
           </a>
+          <p class="link_divider">|</p>
         </div>
         <div class="nav_buttons">
-          <button class="resume_button">Resume</button>
-          <button class="contact_me_button">Contact Me</button>
+          <button class="resume_button btn ">Resume</button>
+          <button class="contact_me_button btn">Contact Me</button>
       </nav>
     </header>
 
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
       <div class="left-container">
-        <form class="contactme-form" action="https://formbold.com/s/9Xxz5"
+        <form class="contactme-form" action="https://formbold.com/s/3d5bb"
         method="POST">
           <div ><h3 class="form-title">Let's Get In Touch!</h3></div>
           <div class="form-item">
@@ -49,14 +51,14 @@
           <div class="form-item">
             <textarea
               name="message"
-              cols="50"
-              rows="10"
+            
+              
               placeholder="Message.."
             ></textarea>
           </div>
 
           <div class="form-item">
-            <button type="submit" class="send_button">Send!</button>
+            <button type="submit" class="send-button">Send!</button>
           </div>
         </form>
       </div>
