add landing page html css

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       <nav class="nav">
         <div class="nav_links">
           <p class="link_divider">|</p>
+          <a class="nav_link" href="#About_me">Home</a>
+         
+          <p class="link_divider">|</p>
           <a class="nav_link" href="#About_me">About Me</a>
           <p class="link_divider">|</p>
           <a class="nav_link" href="#Embedded_software_engineering">
@@ -29,11 +32,22 @@
           <p class="link_divider">|</p>
         </div>
         <div class="nav_buttons">
-          <button class="resume_button btn ">Resume</button>
+          <button href="./directory/EarlRyanParkerResume.pdf" download="EarlRyanParkerResume" class="resume_button btn ">Resume</button>
           <button class="contact_me_button btn">Contact Me</button>
       </nav>
     </header>
 
+    <section class="landing_page" id = "1">
+     <div class = "intro_container">
+      <div class= "intro_text_container">
+        <h2>Hello! My name is,</h2>
+        <h1>EARL RYAN PARKER</h1>
+      </div>
+      <div class="intro_img_container"><img src="robotBoy.PNG" ></div>
+     </div>
+    </section>
+
+    
     <div class="modal hidden">
       <button class="close-modal">&times;</button>
       <div class="left-container">
