fixed resume button functionality, add favicon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Merriweather:ital,wght@0,700;0,900;1,400&display=swap" rel="stylesheet">
+    <link rel="icon" href="/favicon.ico" />
 
   </head>
   <body>
@@ -32,7 +33,7 @@
           <p class="link_divider">|</p>
         </div>
         <div class="nav_buttons">
-          <button href="./directory/EarlRyanParkerResume.pdf" download="EarlRyanParkerResume" class="resume_button btn ">Resume</button>
+          <a href="EarlRyanParkerResume.pdf" download="EarlRyanParkerResume"><button  class="resume_button btn ">Resume</button></a>
           <button class="contact_me_button btn">Contact Me</button>
       </nav>
     </header>
